fix an issue where intial start/end time could be out of bounds

--- a/src/content.less
+++ b/src/content.less
@@ -236,6 +236,7 @@ input[type=number] {
 }
 
 .ggs__result {
+	display: block;
 	border-radius: 2px;
 }
 
